# mkbase

./: CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
CMake/: mkbase.cmake
src/mkbase/: api.hpp  mkbase.hpp
src/mkbase/byteio/: byteio.hpp  int_operations.hpp  merge.cpp  separate.cpp  types.hpp
src/mkbase/byteio/bytesarray/: bytesarray.hpp  read_byte.cpp  write_byte.cpp
src/mkbase/byteio/bytestream/: bytestream.hpp
src/mkbase/byteio/filestream/: filestream.cpp  filestream.hpp  read_byte.cpp  write_byte.cpp
src/mkbase/byteio/lazybytestream/: lazybytestream.hpp
src/mkbase/error/: error.hpp
src/mkbase/logging/: logging.hpp
src/mkbase/sync/: fair_mutex.hpp
tests/: CMakeLists.txt  bytestream.cpp  lazybytestream.cpp
tests/bytesarray/: read.cpp  write.cpp
tests/bytestream/: read.cpp  write.cpp
tests/int_operations/: merge.cpp  separate.cpp
